Ensure .slides bg is white and covers bottom bar

--- a/_extensions/aagi/aagi.scss
+++ b/_extensions/aagi/aagi.scss
@@ -60,7 +60,7 @@ $presentation-font-size-root: 2em;
 }
 
 .reveal .slides {
-  margin-bottom: 5%;
+  background-color: #ffffff;
 }
 
 .reveal .footer {
